[project]
name = "databricks-asset-bundles-rambase"
version = "0.1.0"
description = "Daily ingestion to keep history of rambase data"
authors = [
    {name = "Ola Andre Flotve <ola.flove@hydro.com>"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "pyspark (>=3.0.1,<4.0.0)",
    "pytz (>=2020.4,<2021.0)"
]

[tool.poetry]
packages = [
  { include = "databricks_asset_bundles_rambase", from = "src" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
chispa = "^0.8.1"
pylint = "^2.6.0"
black = "^23.1.0"
isort = "^5.12.0"
python-dateutil = "2.8.2"
ipykernel = "^6.30.1"
mypy = "^1.19.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \.pytest_cache
  | venv
)/

'''
[tool.blackbricks]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \.pytest_cache
  | venv
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Ignore undefined names for Databricks runtime objects
[[tool.mypy.overrides]]
module = "databricks_asset_bundles_rambase.*"
disable_error_code = ["name-defined"]

[[tool.mypy.overrides]]
module = "transformations.*"
disable_error_code = ["attr-defined", "name-defined"]

[tool.isort]
profile = "black"